force-app/main/default/objects/Migrate_Custom_Object_Setting__mdt/Migrate_Custom_Object_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Migrate Custom Object Setting</label>
    <pluralLabel>Migrate Custom Object Settings</pluralLabel>
</CustomObject>