force-app/main/default/objects/Migrate_Custom_Object_Setting__mdt/fields/Big_Object_Field__c.field-meta.xml
<CustomField>
    <fullName>Big_Object_Field__c</fullName>
    <label>Big Object Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>