force-app/main/default/objects/Migrate_Custom_Object_Setting__mdt/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <label>Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAMPAIGN_MEMBER</fullName>
                <default>true</default>
                <label>CAMPAIGN_MEMBER</label>
            </value>
            <value>
                <fullName>INDIVIDUAL_EMAIL_RESULT</fullName>
            </value>
            <value>
                <fullName>WORK_ORDER</fullName>
            </value>
            <value>
                <fullName>WORK_ORDER_LINE_ITEM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>