force-app/main/default/objects/Migrate_Custom_Object_Setting__mdt/listViews/CAMPIGN_MEMBER.listView-meta.xml
<ListView>
    <fullName>CAMPIGN_MEMBER</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Object_Type__c</columns>
    <columns>Big_Object_Field__c</columns>
    <columns>Custom_Object_Field__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object_Type__c</field>
        <operation>equals</operation>
        <value>CAMPAIGN_MEMBER</value>
    </filters>
    <label>CAMPIGN_MEMBER</label>
</ListView>