force-app/main/default/objects/Migrate_Custom_Object_Setting__mdt/listViews/Custom_All.listView-meta.xml
<ListView>
    <fullName>Custom_All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Object_Type__c</columns>
    <columns>Big_Object_Field__c</columns>
    <columns>Custom_Object_Field__c</columns>
    <filterScope>Everything</filterScope>
    <label>Custom All</label>
</ListView>